Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body {
   position: relative;
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
 }
 
 p {
